--- a/labs/lab-5/templates/index.html
+++ b/labs/lab-5/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body class="tier1">
     <header>
-        <h1>Welcome to My Cool Website about NANO SPALAX LEUCODON</h1>
+        <h1>Welcome to My Cool Website about NANO SPALAX LEUCODONs</h1>
     </header>
 
     <div>
