--- a/labs/lab-6/templates/login.html
+++ b/labs/lab-6/templates/login.html
@@ -8,7 +8,15 @@
         <h1>Log In</h1>
         <div>
         <!-- Create a log in form here -->
-
+         <form method="post">
+            <label for="mail">Email:</label>
+            <input type="email" id="mail" name="Email" value=""
+                    placeholder="Enter your Email" required>
+            <label for="pass">Password:</label>
+            <input type="password" id="pass" name="Password" value=""
+                    placeholder="Enter your Password" required>
+            <input type="submit">
+         </form>
         </div>
         
         <br>
